Payroll Module Added

--- a/MyGitApp/MyGitApp.csproj
+++ b/MyGitApp/MyGitApp.csproj
@@ -128,6 +128,7 @@
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Index.aspx" />
     <Content Include="LP_Test.aspx" />
+    <Content Include="Payroll\EmpMasterList.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -209,6 +210,13 @@
     </Compile>
     <Compile Include="LP_Test.aspx.designer.cs">
       <DependentUpon>LP_Test.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Payroll\EmpMasterList.aspx.cs">
+      <DependentUpon>EmpMasterList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Payroll\EmpMasterList.aspx.designer.cs">
+      <DependentUpon>EmpMasterList.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
